# OpenGL-Engine

./: .gitignore  CMakeLists.sublime-workspace  CMakeLists.txt  README.md  vcpkg.json
include/: Camera.hpp  Game.hpp  LightManager.hpp  Material.hpp  Renderer.hpp  ResourceManager.hpp  Shader.hpp  Shape.hpp  TestMenu.hpp  Texture.hpp  constants.hpp  main.hpp
include/Components/: Camera.hpp  Light.hpp  Shape.hpp  Transform.hpp
include/shapes/: cube.hpp
res/gfx/: BasicFragShader.frag  BasicVertShader.vert
src/: Game.cpp  LightManager.cpp  Shader.cpp  Shape.cpp  Texture.cpp  main.cpp
src/Components/: Camera.cpp  Shape.cpp
